# MapReduceCpp

./: .gitignore  CMakeLists.txt  ClientApp.cpp  README.md  SimulationAppStandlone.cpp  TestApp.cpp  function_test.cpp  script.sh
data/: ReverseWeblinkGraphInput.txt  WordCounterInput.txt  top500Domains.csv
doc/: cmake_installation.md  using_cmake_with_vscode.md
docs/Documentation_tex_source/: Documentation.aux  Documentation.bib  Documentation.fdb_latexmk  Documentation.fls  Documentation.tex  IEEEtran_ID.cls  README
extra/: config_InvertedIndex.txt  config_ReverseWeblinkGraph.txt  config_WordCounter.txt
extra/DesignDiagram/: HighLevelDesing  version2_distributed
include/: HelloWorld.hpp  MapReduceConfiguration.hpp  MapReduceMaster.h  MapReduceMaster.hpp  MapReduceResult.hpp  Mapper.hpp  MapperResult.hpp  Reducer.hpp  ReducerResult.hpp  Utility.h
spark/: InvertedIndex.py  ReverseWeblinkGraph.py  WordCount.py
src/: ClientApp.cpp  HelloWorld.cpp  InvertedIndex.cpp  MapReduceMaster.cpp  Mapper.cpp  Reducer.cpp  ReverseWeblinkGraph.cpp  Temp.cpp  WordCounter.cpp
test/: UnitTest1.cpp
tmp/: 1.txt  2.txt  3.txt  4.txt
